app/assets/stylesheets/03session_forms.scss
// form {
//   display: block;
//   margin-top: 0em;
// }



.session-form {
  width: 480px;
  // height: 400px;
  position: absolute;
  top: 10%;
  left: 50%;
  margin-left: -240px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10px;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,.24), 0 0 8px 0 rgba(0,0,0,.08);
  background-color: white;
  
  form {
  display: block;
  margin-top: 0em;
}

  label {
    margin: 25px 0;
    padding: 15px;
    height: 50px;
  }

  form {
    width: 85%;
  }

  input {
    color: gray;
    font-size: 18px;
    width: 103%;
    border-radius: 15px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,.24), 0 0 8px 0 rgba(0,0,0,.08);
    border-width: 1in;
    text-align: center;
  }

  .prime {     
    width: 100%;
    height: 50px;
    padding: 15px;
    margin-bottom: 25px;
    border-radius: 8px;
  }
}

.prime {
background-color: #468A13;
color: white;
font-size: 14px;
font-weight: 500;
text-align: center;
}

.sign-in-page {
  background-image: image_url('sign-in.jpeg');
  background-size: cover;
  position: relative;
  width: 100%;
  z-index: 0;
  height: 800px;
  color: black;
  text-align: center;
}

.sign-up-page {
  background-image: image_url('sign-up.jpeg');
  background-size: cover;
  position: relative;
  width: 100%;
  z-index: 0;
  height: 800px;
  color: black;
  text-align: center;
}

.session-form h2 {
  font-size: 22px;
  color: Grey;
  font-weight: 600;
  margin-top: 30px;
}


.text-field {
  height: 35px;
  font-size: 28px;
}

.email {
  text-align: center;
}

.errors {
  color: red;
  padding-bottom: 10px;
  padding-top: 10px;
}

.session-link {
  padding-bottom: 10px;
}

